# loupe

./: .gitignore  README.md  pyproject.toml
src/loupe/: __init__.py  app.py  df_loader.py  labels.py  state_config.py  state_definitions.json  xr_loader.py
tests/: test_label_incremental.py  test_labels.py  test_navigation_rendering.py  test_state_config.py
