[project]
name = "loupe"
version = "0.1.0"
description = "Multi-trace data viewer for neuroscience"
readme = "README.md"
authors = [
    { name = "Kort Driessen", email = "driessenkort@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=5.2.0,<7",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "polars>=1.34.0",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.9.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.50.0",
    "xarray>=2026.2.0",
    "zarr>=2.18,<3",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
